<resources>
    <string name="app_name">HarryPotterApi</string>

    <!-- Menu -->
    <string name="backgroundDescription">Background</string>
    <string name="backgroundLogo">Background Logo</string>
    <string name="studentsButton">Students</string>
    <string name="staffButton">Staff</string>

    <!-- Detail -->
    <string name="wandCore">Wand Core: </string>
    <string name="patronus">Patronus: </string>
    <string name="houseLogo">House Logo</string>

    <!-- Error -->
    <string name="errorMessage">Sin conexión. \nIntenta nuevamente</string>
    <string name="reload">Recargar</string>
    <string name="unknown">Desconocido</string>
</resources>